--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,7 @@ body{
     width:70vw;
     padding:5px 0;
   }
-  .card-conteiner{
+  .card-container{
     max-height: 30vh;
     overflow-y: scroll;
     max-width: 80vw;
